--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,6 @@
 {
   "require" : {
-	 "php": ">=5.3.0",
-    "silex/silex": "^2.0.4",
-    "monolog/monolog": "^1.22",
-    "twig/twig": "^2.0",
-    "symfony/twig-bridge": "^3"
+	 "php": ">=5.3.0"
   },
   "extra": {
         "heroku": {
