--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "extra": {
         "heroku": {
             "document-root": "web",
-            "index-document": "index.html",
+            "index-document": "index.php",
             "php-config": [
                 "short_open_tag=on",
                 "date.timezone=Europe/Vienna",
